
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int * p; } ;
typedef TYPE_1__ pthread_t ;
struct TYPE_6__ {int started; int threadnum; } ;


 int NUMTHREADS ;
 int Sleep (int) ;
 int assert (int) ;
 int fprintf (int ,char*,int,int) ;
 int mythread ;
 scalar_t__ pthread_create (TYPE_1__*,int *,int ,void*) ;
 TYPE_1__ pthread_self () ;
 int stderr ;
 TYPE_2__* threadbag ;

int
main()
{
  int failed = 0;
  int i;
  pthread_t t[NUMTHREADS + 1];

  assert((t[0] = pthread_self()).p != ((void*)0));

  for (i = 1; i <= NUMTHREADS; i++)
    {
      threadbag[i].started = 0;
      threadbag[i].threadnum = i;
      assert(pthread_create(&t[i], ((void*)0), mythread, (void *) &threadbag[i]) == 0);
    }
  Sleep(NUMTHREADS * 100);




  for (i = 1; i <= NUMTHREADS; i++)
    {
      failed = !threadbag[i].started;

      if (failed)
 {
   fprintf(stderr, "Thread %d: started %d\n", i, threadbag[i].started);
 }
    }

  assert(!failed);




  for (i = 1; i <= NUMTHREADS; i++)
    {

    }

  assert(!failed);




  return 0;
}
